--- a/content/game/balloon.html
+++ b/content/game/balloon.html
@@ -215,14 +215,7 @@ output:
 </div>
 <div id="数据记录" class="section level2">
 <h2>数据记录</h2>
-<ul>
-<li>题目结果显示
-<ul>
-<li>显示正确率和平均正确反应时间</li>
-<li>展示标准分数和超越百分比</li>
-</ul></li>
-<li>提交原始数据如下表（请参考<a href="{{% relref "standard.html" %}}">标准</a>）</li>
-</ul>
+<p>表<a href="#tab:recording-variables">2</a>说明了对于每一对数字需要记录的数据（请参考<a href="{{% relref "standard.html" %}}">标准</a>）。</p>
 <table>
 <caption><span id="tab:recording-variables">表2: </span>原始数据变量列表</caption>
 <thead>
