--- a/content/game/firefly.html
+++ b/content/game/firefly.html
@@ -41,7 +41,7 @@ output:
 <h2>交互界面</h2>
 <p>夜晚森林的背景屏幕中随机位置出现几个萤火虫，其中有些会发光有些不发光（发光的个数3、4、5、6、7），闪烁一定时间后萤火虫的亮光消失并且开始飞舞，最后停在新的位置，用户需要点击刚刚闪烁的萤火虫，用触摸（Android/iOS）或鼠标点击（PC）的方式。 注意：记录用户按对的个数，但按错之后，游戏不会直接终止，而是要等用户选完了再反馈。</p>
 <div class="figure" style="text-align: center"><span id="fig:taskflow-image"></span>
-<img src="/images/VSTM/firefly.png" alt="基本界面"  />
+<img src="/images/VSTM/firefly.png" alt="基本界面" width="80%" />
 <p class="caption">
 图1: 基本界面
 </p>
