Polish some texts to clarify description

--- a/content/game/calculator.html
+++ b/content/game/calculator.html
@@ -31,7 +31,7 @@ output:
 <li><strong>显示名称</strong>：速算师</li>
 <li><strong>英文名称</strong>：calculator</li>
 <li><strong>题目编号</strong>：78</li>
-<li><strong>任务描述</strong>：根据算术法则快速计算，训练更新加工信息的能力。</li>
+<li><strong>任务描述</strong>：根据算术法则快速计算，训练工作记忆能力。</li>
 <li><strong>相关任务</strong>：一站到底（C2游戏）。</li>
 </ul>
 </div>
@@ -48,7 +48,7 @@ output:
 <h1>详细说明</h1>
 <div id="题库配置" class="section level2">
 <h2>题库配置</h2>
-<p>本题目提供一个<a href="/seq/calculator/itembank.csv">题库文件</a>，其中包含了所有可能的题目组合。表<a href="#tab:stimuli">1</a>给出了随机取出10个题目组合，其中：</p>
+<p>本题目提供一个<a href="/seq/calculator/itembank.csv">题库文件</a>，其中包含了所有可能的题目（参考样例表<a href="#tab:stimuli">1</a>）。其中：</p>
 <ul>
 <li><code>title</code>：题面</li>
 <li><code>type</code>：计算法则。<code>add</code>：加法，<code>minus</code>：减法</li>
