--- a/content/game/calculator.html
+++ b/content/game/calculator.html
@@ -48,7 +48,7 @@ output:
 <h1>详细说明</h1>
 <div id="题库配置" class="section level2">
 <h2>题库配置</h2>
-<p>本题目提供一个<a href="/seq/calculator/itembank.csv">题库文件</a>，其中包含了所有可能的题目（参考样例表<a href="#tab:stimuli">1</a>）。其中：</p>
+<p>本题目提供一个<a href="/seq/calculator/itembank.csv">题库文件</a>，其中包含了所有可能的题目（样例参考表<a href="#tab:stimuli">1</a>）。其中：</p>
 <ul>
 <li><code>title</code>：题面</li>
 <li><code>type</code>：计算法则。<code>add</code>：加法，<code>minus</code>：减法</li>
@@ -165,7 +165,7 @@ output:
 <div id="流程" class="section level2">
 <h2>流程</h2>
 <p>本题目可以有<strong>测评</strong>或<strong>训练</strong>两种目的。</p>
-<p><strong>测评</strong>。一共完成三轮，刺激顺序和提供的<a href="/seq/calculator/sequence.csv">序列文件</a>一致。序列文件表中相对于题库而言多出一列字段<code>run</code>，其中<code>R1``R2``R3</code>分别表示三个轮次；每个伦茨根据序列中一行一行地依次进行，总限时2分钟。</p>
+<p><strong>测评</strong>。一共完成三轮，刺激顺序和提供的<a href="/seq/calculator/sequence.csv">序列文件</a>一致。序列文件表中相对于题库而言多出一列字段<code>run</code>，其中<code>R1</code>、<code>R2</code>、<code>R3</code>分别表示三个轮次；每个轮次根据序列中一行一行地依次进行，总限时2分钟。</p>
 <p><strong>训练</strong>。分为3种关卡：</p>
 <ul>
 <li>只做<strong>加法</strong>；</li>
