--- a/content/game/calculator.html
+++ b/content/game/calculator.html
@@ -17,11 +17,16 @@ output:
 <li><a href="#基本信息">基本信息</a></li>
 <li><a href="#交互界面">交互界面</a></li>
 <li><a href="#详细说明">详细说明</a><ul>
-<li><a href="#题库配置">题库配置</a></li>
+<li><a href="#题目配置">题目配置</a></li>
 <li><a href="#流程">流程</a></li>
 <li><a href="#计分规则">计分规则</a></li>
 </ul></li>
-<li><a href="#数据记录">数据记录</a></li>
+<li><a href="#配置参数">配置参数</a></li>
+<li><a href="#数据记录">数据记录</a><ul>
+<li><a href="#结果显示">结果显示</a></li>
+<li><a href="#提交数据">提交数据</a></li>
+<li><a href="#试题算分">试题算分</a></li>
+</ul></li>
 </ul>
 </div>
 
@@ -46,126 +51,23 @@ output:
 </div>
 <div id="详细说明" class="section level1">
 <h1>详细说明</h1>
-<div id="题库配置" class="section level2">
-<h2>题库配置</h2>
-<p>本题目提供一个<a href="/seq/calculator/itembank.csv">题库文件</a>，其中包含了所有可能的题目（样例参考表<a href="#tab:stimuli">1</a>）。其中：</p>
+<div id="题目配置" class="section level2">
+<h2>题目配置</h2>
+<p>本游戏配置了一个<strong>序列文件</strong>（<code>.json</code>，主要是在测评时候用以确定测评序列）和一个<strong>题库文件</strong>（<code>.csv</code>，以后用于训练时候可用）。点击下表中相应链接可以查看。</p>
+{{% directoryindex path="/static/seq/calculator" pathURL="/seq/calculator" %}}
+<p>其中（参考<a href="{{% relref "standard.html" %}}">标准</a>中关于序列格式的说明）：</p>
 <ul>
+<li><code>run</code>：表示轮次（请查看<a href="#流程">流程</a>）。序列文件中专有。</li>
 <li><code>title</code>：题面</li>
 <li><code>type</code>：计算法则。<code>add</code>：加法，<code>minus</code>：减法</li>
 <li><code>difficulty</code>：难度系数（1-3，可优化）</li>
 <li><code>correct</code>, <code>opt1</code>, <code>opt2</code>, <code>opt3</code>：备选选项。注意<code>correct</code>是正确答案，其他三个都是混淆的错误选项。实际呈现的时候，四个选项的位置是随机的。</li>
 </ul>
-<table>
-<caption><span id="tab:stimuli">表1: </span>题库样例</caption>
-<thead>
-<tr class="header">
-<th align="left">title</th>
-<th align="left">type</th>
-<th align="right">difficulty</th>
-<th align="right">correct</th>
-<th align="right">opt1</th>
-<th align="right">opt2</th>
-<th align="right">opt3</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">73 + 45</td>
-<td align="left">add</td>
-<td align="right">2</td>
-<td align="right">118</td>
-<td align="right">117</td>
-<td align="right">128</td>
-<td align="right">108</td>
-</tr>
-<tr class="even">
-<td align="left">14 + 60</td>
-<td align="left">add</td>
-<td align="right">1</td>
-<td align="right">74</td>
-<td align="right">75</td>
-<td align="right">84</td>
-<td align="right">64</td>
-</tr>
-<tr class="odd">
-<td align="left">13 + 87</td>
-<td align="left">add</td>
-<td align="right">2</td>
-<td align="right">100</td>
-<td align="right">99</td>
-<td align="right">110</td>
-<td align="right">90</td>
-</tr>
-<tr class="even">
-<td align="left">67 - 52</td>
-<td align="left">minus</td>
-<td align="right">2</td>
-<td align="right">15</td>
-<td align="right">14</td>
-<td align="right">25</td>
-<td align="right">15</td>
-</tr>
-<tr class="odd">
-<td align="left">20 + 37</td>
-<td align="left">add</td>
-<td align="right">1</td>
-<td align="right">57</td>
-<td align="right">56</td>
-<td align="right">67</td>
-<td align="right">47</td>
-</tr>
-<tr class="even">
-<td align="left">90 - 49</td>
-<td align="left">minus</td>
-<td align="right">3</td>
-<td align="right">41</td>
-<td align="right">42</td>
-<td align="right">51</td>
-<td align="right">51</td>
-</tr>
-<tr class="odd">
-<td align="left">90 - 62</td>
-<td align="left">minus</td>
-<td align="right">3</td>
-<td align="right">28</td>
-<td align="right">27</td>
-<td align="right">38</td>
-<td align="right">38</td>
-</tr>
-<tr class="even">
-<td align="left">84 + 98</td>
-<td align="left">add</td>
-<td align="right">3</td>
-<td align="right">182</td>
-<td align="right">181</td>
-<td align="right">192</td>
-<td align="right">172</td>
-</tr>
-<tr class="odd">
-<td align="left">60 + 94</td>
-<td align="left">add</td>
-<td align="right">2</td>
-<td align="right">154</td>
-<td align="right">155</td>
-<td align="right">164</td>
-<td align="right">144</td>
-</tr>
-<tr class="even">
-<td align="left">37 + 18</td>
-<td align="left">add</td>
-<td align="right">2</td>
-<td align="right">55</td>
-<td align="right">54</td>
-<td align="right">65</td>
-<td align="right">45</td>
-</tr>
-</tbody>
-</table>
 </div>
 <div id="流程" class="section level2">
 <h2>流程</h2>
 <p>本题目可以有<strong>测评</strong>或<strong>训练</strong>两种目的。</p>
-<p><strong>测评</strong>。一共完成三轮，刺激顺序和提供的<a href="/seq/calculator/sequence.csv">序列文件</a>一致。序列文件表中相对于题库而言多出一列字段<code>run</code>，其中<code>R1</code>、<code>R2</code>、<code>R3</code>分别表示三个轮次；每个轮次根据序列中一行一行地依次进行，总限时2分钟。</p>
+<p><strong>测评</strong>。一共完成三轮，刺激顺序和提供的<a href="/seq/calculator/sequence.json" target="_blank">序列文件</a>一致。序列文件表中包含3个对象，其中<code>run</code>的三个取值<code>R1</code>、<code>R2</code>、<code>R3</code>分别表示三个轮次；每个轮次总限时为配置参数，默认为2分钟。</p>
 <p><strong>训练</strong>。分为3种关卡：</p>
 <ul>
 <li>只做<strong>加法</strong>；</li>
@@ -183,8 +85,94 @@ output:
 </ul>
 </div>
 </div>
+<div id="配置参数" class="section level1">
+<h1>配置参数</h1>
+<table>
+<caption><span id="tab:configs">表1: </span>配置参数总表</caption>
+<thead>
+<tr class="header">
+<th align="left">参数类别</th>
+<th align="left">参数名称</th>
+<th align="left">类型</th>
+<th align="center">默认值</th>
+<th align="left">说明</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">刺激呈现</td>
+<td align="left"><code>maxSt</code></td>
+<td align="left"><code>int</code></td>
+<td align="center">200</td>
+<td align="left">单个刺激最大展示时间，单位毫秒</td>
+</tr>
+<tr class="even">
+<td align="left">刺激呈现</td>
+<td align="left"><code>isi</code></td>
+<td align="left"><code>int</code></td>
+<td align="center">1000</td>
+<td align="left">刺激间隔时间，单位毫秒</td>
+</tr>
+<tr class="odd">
+<td align="left">刺激序列</td>
+<td align="left"><code>endMethod</code></td>
+<td align="left"><code>int</code></td>
+<td align="center">2</td>
+<td align="left">题目的结束方式（1=按时间结束，2=按刺激个数结束）</td>
+</tr>
+<tr class="even">
+<td align="left">刺激序列</td>
+<td align="left"><code>duration</code></td>
+<td align="left"><code>int</code></td>
+<td align="center">30000</td>
+<td align="left">题目整体持续时间（<code>endMethod</code>=1时生效，单位毫秒）</td>
+</tr>
+<tr class="odd">
+<td align="left">刺激序列</td>
+<td align="left"><code>quantity</code></td>
+<td align="left"><code>int</code></td>
+<td align="center">100</td>
+<td align="left">刺激总个数（<code>endMethod</code>=2时需全部做完）</td>
+</tr>
+<tr class="even">
+<td align="left">操作反馈</td>
+<td align="left"><code>feedbackCorrectError</code></td>
+<td align="left"><code>bool</code></td>
+<td align="center">0</td>
+<td align="left">控制正式测评时候是（1）否（0）需要反馈正确与错误</td>
+</tr>
+<tr class="odd">
+<td align="left">操作反馈</td>
+<td align="left"><code>feedbackNoResponse</code></td>
+<td align="left"><code>bool</code></td>
+<td align="center">0</td>
+<td align="left">控制正式测评时候是（1）否（0）需要提示用户未操作</td>
+</tr>
+<tr class="even">
+<td align="left">操作反馈</td>
+<td align="left"><code>feedbackSound</code></td>
+<td align="left"><code>bool</code></td>
+<td align="center">1</td>
+<td align="left">控制正式测评时候是（1）否（0）给出声音反馈</td>
+</tr>
+<tr class="odd">
+<td align="left">操作反馈</td>
+<td align="left"><code>feedbackVisual</code></td>
+<td align="left"><code>bool</code></td>
+<td align="center">1</td>
+<td align="left">控制正式测评时候是（1）否（0）给出视觉反馈</td>
+</tr>
+</tbody>
+</table>
+</div>
 <div id="数据记录" class="section level1">
 <h1>数据记录</h1>
+<div id="结果显示" class="section level2">
+<h2>结果显示</h2>
+<p>用户的分数会实时更新，一轮结束后会在屏幕中央显示总得分，并在下方显示超越了多大比例的人。</p>
+</div>
+<div id="提交数据" class="section level2">
+<h2>提交数据</h2>
 <p>表<a href="#tab:recording-variables">2</a>说明了对于每一对数字需要记录的数据（请参考<a href="{{% relref "standard.html" %}}">标准</a>）。</p>
 <table>
 <caption><span id="tab:recording-variables">表2: </span>原始数据变量列表</caption>
@@ -233,4 +221,30 @@ output:
 </tr>
 </tbody>
 </table>
+</div>
+<div id="试题算分" class="section level2">
+<h2>试题算分</h2>
+<table>
+<caption><span id="tab:sdk-score">表3: </span>传入参数（算分码：<code>999</code>）</caption>
+<thead>
+<tr class="header">
+<th align="left">参数名称</th>
+<th align="left">类型</th>
+<th align="left">说明</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left"><code>hitRate</code></td>
+<td align="left"><code>float</code></td>
+<td align="left">用户在对所有需要操作的刺激中正确操作的比例</td>
+</tr>
+<tr class="even">
+<td align="left"><code>FARate</code></td>
+<td align="left"><code>float</code></td>
+<td align="left">用户在对所有不需要操作的刺激中错误操作的比例</td>
+</tr>
+</tbody>
+</table>
+</div>
 </div>
