Stress the stochastic display of options

--- a/content/game/calculator.html
+++ b/content/game/calculator.html
@@ -68,7 +68,7 @@ output:
 </div>
 <div id="选项配置" class="section level2">
 <h2>选项配置</h2>
-<p>本游戏所有题目都配置四个选项，其中一个为正确选项，其余三个为干扰选项。实际呈现时，所有选项都是随机排列的。干扰选项的生成规则如下：</p>
+<p>本游戏所有题目都配置四个选项，其中一个为正确选项，其余三个为干扰选项。实际呈现时，所有选项都是<strong>随机排列</strong>的。干扰选项的生成规则如下：</p>
 <div id="加法干扰选项" class="section level3">
 <h3>加法干扰选项</h3>
 <ul>
