Update specification of sequence formula

--- a/content/game/calculator.html
+++ b/content/game/calculator.html
@@ -62,8 +62,8 @@ output:
 <p>其中（参考<a href="{{% relref "standard.html" %}}">标准</a>中关于序列格式的说明）：</p>
 <ul>
 <li><code>run</code>：表示轮次（请查看<a href="#流程">流程</a>）。序列文件中专有。</li>
-<li><code>title</code>：题面</li>
-<li><code>type</code>：计算法则。<code>add</code>：加法，<code>minus</code>：减法</li>
+<li><code>type</code>：计算法则。<code>add</code>：加法，<code>minus</code>：减法。</li>
+<li><code>left</code>、<code>right</code>：分别对应于生成题目时运算符号左侧（<code>left</code>）和右侧（<code>right</code>）的数字。</li>
 </ul>
 </div>
 <div id="选项配置" class="section level2">
