--- a/content/game/butterfly.html
+++ b/content/game/butterfly.html
@@ -33,5 +33,5 @@ output:
 </div>
 <div id="交互流程" class="section level1">
 <h1>交互流程</h1>
-<p><a href="/axure-rp-design/butterfly/start.html" target="_blank">点击此处</a>查看初步的交互流程设计。</p>
+<p><a href="/axure-rp-design/butterfly/start.html" target="_blank">点击此处</a>查看交互流程设计。</p>
 </div>
