Add details on stimuli and sequence

--- a/content/game/butterfly.html
+++ b/content/game/butterfly.html
@@ -18,6 +18,10 @@ output:
 <ul>
 <li><a href="#基本信息">基本信息</a></li>
 <li><a href="#交互流程">交互流程</a></li>
+<li><a href="#详细说明">详细说明</a><ul>
+<li><a href="#刺激">刺激</a></li>
+<li><a href="#序列">序列</a></li>
+</ul></li>
 </ul>
 </div>
 
@@ -34,4 +38,23 @@ output:
 <div id="交互流程" class="section level1">
 <h1>交互流程</h1>
 <p><a href="/axure-rp-design/butterfly/start.html" target="_blank">点击此处</a>查看交互流程设计。</p>
+</div>
+<div id="详细说明" class="section level1">
+<h1>详细说明</h1>
+<div id="刺激" class="section level2">
+<h2>刺激</h2>
+<p>使用<strong>蝴蝶</strong>作为基本的刺激材料。蝴蝶的形状简单一点，使得用户可以很容易地判断是否对称。</p>
+<p>总计需设计<code>40</code>张张不同的蝴蝶图片，其中</p>
+<ul>
+<li>引导和练习部分需要设计<code>4</code>（2张引导，2张练习）张不同的蝴蝶图片，对称的和不对称的各占一半。对称的编号为<code>ps01</code>–<code>ps02</code>，不对称的编号为<code>pn01</code>–<code>pn02</code>。</li>
+<li>正式测评部分需要设计<code>36</code>张不同的蝴蝶图片，对称的和不对称的各占一半。对称的18张蝴蝶图片编号为<code>s01</code>–<code>s18</code>，不对称的18张图片编号为<code>n01</code>–<code>n18</code>。</li>
+</ul>
+</div>
+<div id="序列" class="section level2">
+<h2>序列</h2>
+<ul>
+<li>引导和练习都只需要呈现2张（1张对称、1张不对称）蝴蝶图片进行记忆。</li>
+<li>正式测评按随机顺序分别呈现3、4、5、6张蝴蝶图片进行记忆。实际的序列将在后面给出。</li>
+</ul>
+</div>
 </div>
