--- a/content/fix/01201_PVTAdult.html
+++ b/content/fix/01201_PVTAdult.html
@@ -15,14 +15,10 @@ output:
 <div id="TOC">
 <ul>
 <li><a href="#基本信息">基本信息</a></li>
-<li><a href="#交互界面">交互界面</a></li>
-<li><a href="#详细说明">详细说明</a></li>
-<li><a href="#配置参数">配置参数</a></li>
 <li><a href="#数据记录">数据记录</a><ul>
 <li><a href="#结果显示">结果显示</a></li>
 <li><a href="#数据提交">数据提交</a></li>
 </ul></li>
-<li><a href="#试题算分">试题算分</a></li>
 </ul>
 </div>
 
@@ -35,17 +31,6 @@ output:
 <li><strong>任务描述</strong>：测查反应力，特别是指个体对外界信号做出快速反应的能力</li>
 <li><strong>测查能力</strong>：反应力-反应速度</li>
 </ul>
-</div>
-<div id="交互界面" class="section level2">
-<h2>交互界面</h2>
-<p>目前已完善，后续有时间在完成文档化工作。</p>
-</div>
-<div id="详细说明" class="section level2">
-<h2>详细说明</h2>
-<p>敬请期待。</p>
-</div>
-<div id="配置参数" class="section level2">
-<h2>配置参数</h2>
 </div>
 <div id="数据记录" class="section level2">
 <h2>数据记录</h2>
@@ -60,7 +45,7 @@ output:
 <h3>数据提交</h3>
 <p>表<a href="#tab:recording-variables">1</a>说明了对于每一个试次需要记录的数据（请参考<a href="{{% relref "standard.html" %}}">标准</a>）。</p>
 <table>
-<caption><span id="tab:recording-variables">表1: </span>原始数据变量列表</caption>
+<caption><span id="tab:recording-variables">Table 1: </span>原始数据变量列表</caption>
 <thead>
 <tr class="header">
 <th align="left">名称</th>
@@ -82,29 +67,4 @@ output:
 </tbody>
 </table>
 </div>
-</div>
-<div id="试题算分" class="section level2">
-<h2>试题算分</h2>
-<table>
-<caption><span id="tab:sdk-score">表2: </span>传入参数（算分码：<code>200</code>）</caption>
-<thead>
-<tr class="header">
-<th align="left">参数名称</th>
-<th align="left">类型</th>
-<th align="left">说明</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left"><code>average</code></td>
-<td align="left"><code>int</code></td>
-<td align="left">正确试次的平均反应时间</td>
-</tr>
-<tr class="even">
-<td align="left"><code>rate</code></td>
-<td align="left"><code>float</code></td>
-<td align="left">用户在整个题目中的正确率</td>
-</tr>
-</tbody>
-</table>
 </div>
