--- a/content/fix/02101_itemTracking.html
+++ b/content/fix/02101_itemTracking.html
@@ -1,10 +1,10 @@
 ---
-title: 倒背数（digital-desc）
+title: 雷达追踪（itemTracking）
 author: 张亮
 date: '2018-04-12'
-slug: 00202-digital-desc
-code: "00202"
-tasknames: "数字记忆广度"
+slug: 02101-itemTracking
+code: "02101"
+tasknames: "多目标追踪范式"
 output:
   blogdown::html_page:
     toc: true
@@ -25,11 +25,11 @@ output:
 <div id="基本信息" class="section level2">
 <h2>基本信息</h2>
 <ul>
-<li><strong>显示名称</strong>：倒背数</li>
-<li><strong>英文名称</strong>：digital-desc</li>
-<li><strong>题目编号</strong>：00202</li>
-<li><strong>任务描述</strong>：测查自控力，特别是根据需要操纵头脑中存储的信息的能力</li>
-<li><strong>测查能力</strong>：自控力-信息更新</li>
+<li><strong>显示名称</strong>：雷达追踪</li>
+<li><strong>英文名称</strong>：itemTracking</li>
+<li><strong>题目编号</strong>：02101</li>
+<li><strong>任务描述</strong>：测查注意力，特别是个体在一定时间内，将注意稳定地保持在指定对象上的能力。</li>
+<li><strong>测查能力</strong>：注意力-选择注意</li>
 </ul>
 </div>
 <div id="数据记录" class="section level2">
@@ -37,7 +37,7 @@ output:
 <div id="结果显示" class="section level3">
 <h3>结果显示</h3>
 <ul>
-<li>显示最多能正确倒背出来的数字数目</li>
+<li>显示最多能正确选择出来的追踪点数</li>
 <li>展示标准分数和超越百分比</li>
 </ul>
 </div>
@@ -57,24 +57,19 @@ output:
 <tr class="odd">
 <td align="left"><code>SLen</code></td>
 <td align="left"><code>int</code></td>
-<td align="left">当前试次的数字个数。</td>
+<td align="left">当前试次需要追踪的点数</td>
 </tr>
 <tr class="even">
-<td align="left"><code>CResp</code></td>
-<td align="left"><code>char</code></td>
-<td align="left">正确的数字顺序（Correct Response），也就是把呈现的数字按倒序直接拼在一起组成的字符串</td>
+<td align="left"><code>DLen</code></td>
+<td align="left"><code>int</code></td>
+<td align="left">当前试次干扰点的个数</td>
 </tr>
 <tr class="odd">
-<td align="left"><code>Resp</code></td>
-<td align="left"><code>char</code></td>
-<td align="left">用户的实际反应（Response），即把用户实际点击的数字直接拼在一起组成的字符串</td>
-</tr>
-<tr class="even">
 <td align="left"><code>ACC</code></td>
 <td align="left"><code>int</code></td>
 <td align="left">正确或错误(ACCuracy)，0=错误，1=正确。</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left"><code>RT</code></td>
 <td align="left"><code>int</code></td>
 <td align="left">用户完成操作所需时间（单位：毫秒）(Response Time)</td>
