--- a/content/game/butterfly.html
+++ b/content/game/butterfly.html
@@ -56,7 +56,12 @@ output:
 <h2>序列</h2>
 <ul>
 <li>引导和练习都只需要呈现2张（1张对称、1张不对称）蝴蝶图片进行记忆。</li>
-<li>正式测评按随机顺序分别呈现3、4、5、6张蝴蝶图片进行记忆。实际的序列将在后面给出。</li>
+<li>正式测评按随机顺序分别呈现3、4、5、6张蝴蝶图片进行记忆。<a href="/seq/butterfly.json">序列文件</a>中包含以下值：
+<ul>
+<li><code>slen</code>：当前轮次需要呈现的蝴蝶个数（3-6中的一个）。</li>
+<li><code>sym</code>：当前轮次先后呈现的蝴蝶是否对称，其中<code>s</code>代表对称，<code>n</code>代表不对称。例如<code>nsn</code>就表示现后呈现的三张蝴蝶照片依次是<strong>不对称</strong>、<strong>对称</strong>、<strong>不对称</strong>。</li>
+<li><code>loc</code>：当前轮次先后呈现的蝴蝶飞入网格后停留的位置，使用16进制数字表示（参考设计中的图）。例如<code>148</code>就表示先后呈现的蝴蝶位置分别为1号、4号、8号网格。</li>
+</ul></li>
 </ul>
 </div>
 </div>
