--- a/content/fix/01201_PVTAdult.html
+++ b/content/fix/01201_PVTAdult.html
@@ -22,8 +22,8 @@ output:
 </ul>
 </div>
 
-<div id="基本信息" class="section level2">
-<h2>基本信息</h2>
+<div id="基本信息" class="section level1">
+<h1>基本信息</h1>
 <ul>
 <li><strong>显示名称</strong>：超级秒表</li>
 <li><strong>英文名称</strong>：PVTAdult</li>
@@ -32,20 +32,20 @@ output:
 <li><strong>测查能力</strong>：反应力-反应速度</li>
 </ul>
 </div>
-<div id="数据记录" class="section level2">
-<h2>数据记录</h2>
-<div id="结果显示" class="section level3">
-<h3>结果显示</h3>
+<div id="数据记录" class="section level1">
+<h1>数据记录</h1>
+<div id="结果显示" class="section level2">
+<h2>结果显示</h2>
 <ul>
 <li>显示最快的一次的反应时间</li>
 <li>展示标准分数和超越百分比</li>
 </ul>
 </div>
-<div id="数据提交" class="section level3">
-<h3>数据提交</h3>
+<div id="数据提交" class="section level2">
+<h2>数据提交</h2>
 <p>表<a href="#tab:recording-variables">1</a>说明了对于每一个试次需要记录的数据（请参考<a href="{{% relref "standard.html" %}}">标准</a>）。</p>
 <table>
-<caption><span id="tab:recording-variables">Table 1: </span>原始数据变量列表</caption>
+<caption><span id="tab:recording-variables">表1: </span>原始数据变量列表</caption>
 <thead>
 <tr class="header">
 <th align="left">名称</th>
